fixed overflow issue in /shop when user makes window narrow

--- a/public/style.css
+++ b/public/style.css
@@ -427,6 +427,10 @@ button.headerNav:hover {
   margin: 0;
 }
 
+.navLink>*.hover {
+  background-color: #5c90da;
+}
+
 .navLink,
 .navLink:active,
 .navLink > a:visited {
